# crates/sito-api/src/openapi.rs
@@ -21,15 +21,18 @@ use utoipa::OpenApi;
         crate::handlers::filtering::set_filtering_rules,
         crate::handlers::filtering::check_filtering,
         crate::handlers::clients::get_clients,
+        crate::handlers::clients::get_client_by_name,
         crate::handlers::clients::create_client,
         crate::handlers::clients::update_client,
         crate::handlers::clients::delete_client,
         crate::handlers::clients::get_client_groups,
+        crate::handlers::clients::get_client_group_by_name,
         crate::handlers::clients::add_client_group,
         crate::handlers::clients::update_client_group,
         crate::handlers::clients::delete_client_group,
         crate::handlers::rewrites::get_rewrites,
         crate::handlers::rewrites::add_rewrite,
+        crate::handlers::rewrites::update_rewrite,
         crate::handlers::rewrites::delete_rewrite,
         crate::handlers::upstream::get_upstream_config,
         crate::handlers::upstream::update_upstream_config,
